plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

group 'ir.soroushtabesh'
version = '1.0.1'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

javafx {
    version = "14"
    modules = [ 'javafx.controls'
                , 'javafx.fxml'
                , 'javafx.media'
                , 'javafx.graphics'
                , 'javafx.base']
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'com.google.code.gson:gson:2.8.6'
    compile 'org.hibernate:hibernate-core:5.4.12.Final'
    compile 'com.google.guava:guava:28.2-jre'
    compile 'com.h2database:h2:1.4.200'
    compile 'commons-codec:commons-codec:1.11'
    compile 'log4j:log4j:1.2.17'
    compile 'org.apache.commons:commons-lang3:3.10'
    compile 'io.github.typhon0:AnimateFX:1.2.1'
    compile 'org.postgresql:postgresql:42.2.14'
//    compile 'org.reflections:reflections:0.9.12'
//    compile 'com.indvd00m.ascii.render:ascii-render:2.1.3'
    compile 'com.javaetmoi.core:javaetmoi-hibernate5-hydrate:5.2.1'
}

sourceSets.main.resources {
    srcDirs = ['src/main/java', 'src/main/resources']
    include '**/*.*'
}

